--- a/third-repo.html
+++ b/third-repo.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Make a blog</h1>
     <h3>This blog is about trafic jam.</h3>
-    <p>Every people have tolerate this problem.And it's happen very much when people or studernt go their distination and come back home.Every people have tolerate this problem.And it's happen very much when people or studernt go their distination and come back home.
+    <p>Every people have tolerate this problem.And it's <br> happen very much when people or studernt go their distination and come back home.<br> Every people have tolerate this problem.And it's happen very much when <br> people or studernt go their distination and come back home.
     </p>
     
 </body>
